// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`stationsTableHeadersConf > with groups column 1`] = `
[
  {
    "isBold": true,
    "isFixed": true,
    "sortable": true,
    "style": {
      "minWidth": "200px",
    },
    "text": "Station name",
    "textKey": "name",
    "value": "name",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isHidden": [Function],
    "showTooltip": [Function],
    "sortable": true,
    "text": "Factories",
    "textKey": "factoryNamesArray",
  },
  {
    "appendIcon": [Function],
    "appendIconClass": "ml-2",
    "appendIconSize": 16,
    "appendIconTooltipText": "Global group",
    "prependIcon": [Function],
    "prependIconColor": [Function],
    "prependIconSize": 16,
    "text": "Group",
    "textKey": "groupName",
    "value": "groupId",
  },
  {
    "formatFn": [Function],
    "sortable": true,
    "text": "Notification emails",
    "textKey": "notificationEmails",
  },
  {
    "formatFn": [Function],
    "sortable": true,
    "text": "Require operator",
    "textKey": "requireOperator",
  },
  {
    "sortable": true,
    "text": "Empty shift reason",
    "textKey": "emptyShiftReason",
  },
  {
    "formatFn": [Function],
    "sortable": true,
    "text": "Unhappy OEE",
    "textKey": "oeeGoalSad",
  },
  {
    "formatFn": [Function],
    "sortable": true,
    "text": "Happy OEE",
    "textKey": "oeeGoalHappy",
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIcon": "M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z",
    "filterable": false,
    "isHidden": [Function],
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
]
`;

exports[`stationsTableHeadersConf > without groups column 1`] = `
[
  {
    "isBold": true,
    "isFixed": true,
    "sortable": false,
    "style": {
      "minWidth": "200px",
    },
    "text": "Station name",
    "textKey": "name",
    "value": "name",
  },
  {
    "formatFn": [Function],
    "formatTooltipFn": [Function],
    "isHidden": [Function],
    "showTooltip": [Function],
    "sortable": false,
    "text": "Factories",
    "textKey": "factoryNamesArray",
  },
  {
    "formatFn": [Function],
    "sortable": false,
    "text": "Notification emails",
    "textKey": "notificationEmails",
  },
  {
    "formatFn": [Function],
    "sortable": false,
    "text": "Require operator",
    "textKey": "requireOperator",
  },
  {
    "sortable": false,
    "text": "Empty shift reason",
    "textKey": "emptyShiftReason",
  },
  {
    "formatFn": [Function],
    "sortable": false,
    "text": "Unhappy OEE",
    "textKey": "oeeGoalSad",
  },
  {
    "formatFn": [Function],
    "sortable": false,
    "text": "Happy OEE",
    "textKey": "oeeGoalHappy",
  },
  {
    "additionalStyle": {
      "float": "right",
    },
    "appendIcon": "M8.59,16.58L13.17,12L8.59,7.41L10,6L16,12L10,18L8.59,16.58Z",
    "filterable": false,
    "isHidden": [Function],
    "sortable": false,
    "style": {
      "width": "50px",
    },
  },
]
`;
